2011-10-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/import.c: Move low-level pixel import functions from
	constitute.c to new file import.c.

	* magick/export.c: Move low-level pixel export functions from
	constitute.c to new file export.c.

	* magick/floats.c: Move Richard Nolde's floating point conversion
	functions from constitute.c to new file float.c.

2011-10-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtool: Updated to libtool 2.4.2.

	* configure.ac: Automake conditional for HasPNG can not itself be
	conditional.  Indent PNG script code appropriately.

2011-10-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (AUTOMAKE_OPTIONS): Distribute lzma-compressed
	tarball in 'xz' format rather than deprecated 'lzma' format.

2011-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix syntax error with GSCMYKDevice ('==' rather
	than '=').  Thanks to Glenn Randers-Pehrson for noticing and
	reporting the issue.

2011-10-12  Glenn Randers-Pehrson  <glennrp@simple...>

	* Use a "for" loop in configure.ac to find libpngNN.

2011-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/pixel_wand.c (NewPixelWand): Invoke InitializeMagick()
	automatically in case user forgets to do so.

	* wand/drawing_wand.c (NewDrawingWand): Invoke InitializeMagick()
	automatically in case user forgets to do so.

	* wand/magick_wand.c (NewMagickWand): Invoke InitializeMagick()
	automatically in case user forgets to do so.

	* png: libpng sources were updated to release 1.5.4.

2011-10-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): TIFFGetField() on
	TIFFTAG_OPIIMAGEID was causing a crash due to an argument
	mis-match between GraphicsMagick and libtiff.  Also fixed a few
	GCC 4.6 warnings.  Problem was reported by Dylan Millikin.

2011-10-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickSetDepth): New function to set the