@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020111023"
+#define public MagickPackageVersionAddendum ".020111029"
 #define public MagickPackageReleaseDate "unreleased"
