@@ -36,6 +36,13 @@
 <div class="document">
 
 
+<p>2011-10-29  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/meta.c (GetIPTCStream): Eliminate possible use of
+uninitialized data when parsing long format tag length.</li>
+</ul>
+</blockquote>
 <p>2011-10-23  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
@@ -44,7 +51,7 @@ constitute.c to new file import.c.</li>
 <li>magick/export.c: Move low-level pixel export functions from
 constitute.c to new file export.c.</li>
 <li>magick/floats.c: Move Richard Nolde's floating point conversion
-functions from constitute.c to new file float.c.</li>
+functions from constitute.c to new file floats.c.</li>
 </ul>
 </blockquote>
 <p>2011-10-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
